fix(librewolf): make permission request show above navbar
Rendering below rendered offscreen while tiled.
Hacky, but it'll do for the short-term.

--- a/.config/librewolf/profiles/default/chrome/navbar.css
+++ b/.config/librewolf/profiles/default/chrome/navbar.css
@@ -17,6 +17,10 @@
   top: auto !important;
 }
 
+#notification-popup {
+  margin-top: -200px !important; /* make permission requests display upwards */
+}
+
 .searchmode-switcher {
   position: unset !important; /* make it not float mid screen */
 }
